# patient_encounter_system_project

./: .bandit  .coverage  .env  README.md  app.db  inspect_columns.py  pyproject.toml  test.db
.github/workflows/: ci.yml
alembic/: env.py
src/: app.db  database.py  main.py
src/models/: __init__.py  appointment.py  doctor.py  patient.py
src/patient_encounter_system/: database.py  main.py
src/patient_encounter_system/models/: appointment.py  doctor.py  patient.py
src/patient_encounter_system/routes/: appointments.py  doctors.py  patients.py
src/patient_encounter_system/schemas/: appointment.py  doctor.py  patient.py
src/patient_encounter_system/services/: appointment_service.py
src/routes/: appointments.py  doctors.py  patients.py
src/schemas/: doctor.py  patient.py
src/services/: appointment_service.py
tests/: conftest.py  test_appointments.py  test_doctors.py  test_main.py  test_patients.py
