[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = "Medical Encounter Management System"
authors = ["Parth Gera <parthgera2004@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110"
uvicorn = "^0.29"

sqlalchemy = "^2.0"
alembic = "^1.13"
mysqlclient = "^2.2"
pymysql = "^1.1"

pydantic = "^2.6"
python-dateutil = "^2.9"
python-dotenv = "^1.2.1"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

ruff = "^0.3"
black = "^24.0"
bandit = "^1.7"


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
